# Qwicky-Uni

./: CMakeLists.txt  README.md  main.cpp
data/: admin.db  admins.db  admins.db-journal  mainresources.qrc
data/usersdata/: login.txt
diagrams/: Qwicky.drawio
docs/: _ceasor_8cpp.html  _ceasor_8cpp_source.html  _ceasor_8h.html  _ceasor_8h_source.html  _r_e_a_d_m_e_8md.html  additem_8cpp.html  additem_8cpp_source.html  additem_8h.html  additem_8h_source.html  addorder_8cpp.html  addorder_8cpp_source.html  addorder_8h.html  addorder_8h_source.html  admindashboard_8cpp.html  admindashboard_8cpp_source.html  admindashboard_8h.html  admindashboard_8h_source.html  annotated.html  class_additem-members.html  class_additem.html  class_addorder-members.html  class_addorder.html  class_admin_dashboard-members.html  class_admin_dashboard.html  class_customer-members.html  class_customer.html  class_database_manager-members.html  class_database_manager.html  class_ingredient-members.html  class_ingredient.html  class_item-members.html  class_item.html  class_main_window-members.html  class_main_window.html  class_order-members.html  class_order.html  class_order_items-members.html  class_order_items.html  class_show_selected-members.html  class_show_selected.html  (+101 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_4.js  all_5.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_5.js  classes_6.js  files_0.js  files_1.js  files_3.js  files_5.js  files_7.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  searchdata.js  typedefs_0.js  (+13 more)
src/: CMakeLists.txt
src/app/: admindashboard.cpp  customerdashboard.cpp  mainwindow.cpp
src/include/: Ceasor.h  Showorder.h  addcustomer.h  additem.h  addorder.h  admindashboard.h  commonincludes.h  customer.h  customerdashboard.h  databasemanager.h  ingredient.h  item.h  mainwindow.h  order.h  orderitems.h  showcustomer.h  showitem.h  showselected.h
ui/: addcustomer.ui  additem.ui  addorder.ui  admindashboard.ui  customer.ui  customerdashboard.ui  ingredient.ui  item.ui  mainwindow.ui  order.ui  orderitems.ui  showcustomer.ui  showitem.ui  showorder.ui  showselected.ui
(+14 files in other folders)
